--- a/pedido-movel/src/pages/home/home.html
+++ b/pedido-movel/src/pages/home/home.html
@@ -3,12 +3,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Produtos</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Pedido Móvel</h3>
 
   <p>
     Teste inicial do pedido movel
