--- a/pedido-movel/src/pages/principal/produtos/produtos.html
+++ b/pedido-movel/src/pages/principal/produtos/produtos.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Thumbnails</ion-title>
+    <ion-title>Produtos</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -8,66 +8,13 @@
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
 
-    <ion-item>
+    <ion-item *ngFor="let produto of produtoService.produtos">
       <ion-thumbnail item-start>
-        
+        <img src="img/geladeira.jpg">
       </ion-thumbnail>
-      <h2>My Neighbor Totoro</h2>
-      <p>Hayao Miyazaki • 1988</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-rotla.png">
-      </ion-thumbnail>
-      <h2>Raiders of the Lost Ark</h2>
-      <p>Steven Spielberg • 1981</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-ghostbusters.png">
-      </ion-thumbnail>
-      <h2>Ghostbusters</h2>
-      <p>Ivan Reitman • 1984</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-batman.png">
-      </ion-thumbnail>
-      <h2>Batman</h2>
-      <p>Tim Burton • 1988</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-bttf.png">
-      </ion-thumbnail>
-      <h2>Back to the Future</h2>
-      <p>Robert Zemeckis • 1985</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-esb.png">
-      </ion-thumbnail>
-      <h2>The Empire Strikes Back</h2>
-      <p>Irvin Kershner • 1980</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
-
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/thumbnail-terminator.png">
-      </ion-thumbnail>
-      <h2>The Terminator</h2>
-      <p>James Cameron • 1984</p>
+      <h2>{{produto.codigo}}</h2>
+      <p>{{produto.nome}}</p>
+      <p>{{produto.grupo.codigo}} - {{produto.grupo.nome}} </p>
       <button ion-button clear item-end>View</button>
     </ion-item>
 
