--- a/pedido-movel/src/pages/cliente/cliente.html
+++ b/pedido-movel/src/pages/cliente/cliente.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button clear item-end>View</button>
+  <button ion-button clear item-end (click)='cadastrar()'>Cadastrar</button>
 </ion-content>
