--- a/pedido-movel/src/pages/finalizacao/finalizacao.html
+++ b/pedido-movel/src/pages/finalizacao/finalizacao.html
@@ -5,5 +5,6 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button clear item-end>View</button>
+  <h3 >Parabéns</h3>
+  <button ion-button clear item-end (click)='voltar()'>OK</button>
 </ion-content>
