--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button clear item-end>View</button>
+  <button ion-button clear item-end (click)='search()'>View</button>
 </ion-content>
