--- a/pedido-movel/src/pages/pedido/pedido.html
+++ b/pedido-movel/src/pages/pedido/pedido.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button clear item-end>View</button>
+  <button ion-button clear item-end (click)='finalizar()'>Finalizar</button>
 </ion-content>
