--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -8,7 +8,7 @@
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
 
-    <ion-item *ngFor="let produto of produtoService.produtos">
+    <ion-item *ngFor="let produto of produtos">
       <ion-thumbnail item-start>
         <img src="img/geladeira.jpg">
       </ion-thumbnail>
