--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -5,5 +5,20 @@
 </ion-header>
 
 <ion-content>
-  <button ion-button clear item-end (click)='search()'>View</button>
+  <ion-searchbar (ionInput)="searchByText($event)">
+  </ion-searchbar>
+
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-12>Campanha</ion-col>
+    </ion-row>
+    <ion-row row>
+      <ion-col col-lg-4 col-md-6 col-sm-12 *ngFor="let grupo of grupoService.grupos">
+        <button ion-button clear item-end (click)='searchByGroup(grupo)'>{{grupo.codigo}} - {{grupo.nome}}</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  
 </ion-content>
