--- a/pedido-movel/src/pages/home/home.html
+++ b/pedido-movel/src/pages/home/home.html
@@ -3,16 +3,9 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Produtos</ion-title>
+    <ion-title>Pedido móvel</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Pedido Móvel</h3>
-
-  <p>
-    Teste inicial do pedido movel
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
