--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -3,7 +3,11 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Pedido móvel</ion-title>
+    <div class="logo-default" style="display: inline-block"></div>
+    <div class="basket">
+      <div class="basket-text">Itens do pedido</div>
+      <div class="fa fa-fw fa-shopping-basket"></div>
+    </div>
   </ion-navbar>
 </ion-header>
 
@@ -23,5 +27,5 @@
     </ion-row>
   </ion-grid>
 
-  
+
 </ion-content>
