Botões tela inicial
Ajustando o tamanho dos botões

--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -6,7 +6,7 @@
     <div class="logo-default"></div>
     <ion-buttons end>
       <button (click)="myFunction()" ion-button>
-        <span class="basket-text">
+        <span class="buttons-text">
           Itens do pedido
         </span>
         <span class="fa fa-fw fa-shopping-basket basket"></span>
@@ -53,14 +53,14 @@
   <ion-toolbar>
     <ion-buttons>
       <button ion-button style="width: 49%;">
-        <span class="fa fa-fw fa-user-plus basket"></span>
-        <span class="basket-text">
+        <span class="fa fa-fw fa-user-plus buttons-footer"></span>
+        <span class="buttons-text">
           Adicionar Cliente
         </span>
       </button>
       <button ion-button style="width: 49%;">
-        <span class="fa fa-fw fa-users basket"></span>
-        <span class="basket-text">
+        <span class="fa fa-fw fa-users buttons-footer"></span>
+        <span class="buttons-text">
           Todos os Clientes
         </span>
       </button>
