Adicionando navegação para o carrinho

--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -5,7 +5,7 @@
     </button>
     <div class="logo-default"></div>
     <ion-buttons end>
-      <button (click)="myFunction()" ion-button>
+      <button (click)="irParaCarrinho()" ion-button>
         <span class="basket-text">
           Itens do pedido
         </span>
@@ -50,7 +50,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <ion-toolbar  style="min-height: 60px">
     <ion-buttons>
       <button ion-button style="width: 49%;">
         <span class="fa fa-fw fa-user-plus basket"></span>
