--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -38,7 +38,7 @@
       <ion-grid>
         <ion-row row>
           <ion-col col-lg-3 col-md-4 col-sm-6 col-xs-12 *ngFor="let grupo of grupoService.grupos">
-            <div style="border:2px solid #D8D8D8; padding: 20px; height:100px;">
+            <div (click)="searchByGroup(grupo)" style="border:2px solid #D8D8D8; padding: 20px; height:100px;" >
               <b>{{grupo.nome}}</b>
             </div>
           </ion-col>
