--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -5,11 +5,14 @@
     </button>
     <div class="logo-default"></div>
     <ion-buttons end>
+      <button (click)="irParaProdutos()" ion-button>
+        <span class="fa fa-fw fa-search buttons-header"></span>
+      </button>
       <button (click)="irParaCarrinho()" ion-button>
         <span class="buttons-text">
           Itens do pedido
         </span>
-        <span class="fa fa-fw fa-shopping-basket basket"></span>
+        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -17,9 +20,6 @@
 
 
 <ion-content>
-
-  <ion-searchbar (ionInput)="searchByText($event)"></ion-searchbar>
-
   <ion-card>
     <ion-card-header>
       CAMPANHA
