--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <ion-searchbar (ionInput)="consultarProdutos($event)"></ion-searchbar>
   <ion-list>
 
     <ion-item *ngFor="let produto of produtos">
