--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -10,10 +10,15 @@
   <ion-card>
     <ion-card-header>
       PRODUTOS
+      <button (click)="addProduct()" ion-button round small style="float: right;">
+        <span class="fa fa-fw fa-shopping-basket"></span>
+        <span>Adicionar Item(ns)</span>
+      </button>
     </ion-card-header>
     <ion-card-content>
       <ion-list>
         <ion-item *ngFor="let produto of produtos" class="card-item-edges">
+            <ion-checkbox [(ngModel)]="produto.selecionado"> </ion-checkbox>
             <ion-thumbnail item-start>
               <img src="img/geladeira.jpg">
             </ion-thumbnail>
