--- a/pedido-movel/src/pages/pedido/pedido.html
+++ b/pedido-movel/src/pages/pedido/pedido.html
@@ -14,6 +14,7 @@
       </button>
     </ion-card-header>
     <ion-card-content>
+      <div class="barra-divisoria"></div>
       <ion-list>
         <ion-item *ngFor="let produto of getProdutos()" class="card-item-edges">
             <ion-thumbnail item-start>
