--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -25,6 +25,7 @@
       CAMPANHA
     </ion-card-header>
     <ion-card-content>
+      <div class="barra-divisoria"></div>
       <div class="card-campanha-content">
       </div>
     </ion-card-content>
@@ -35,6 +36,7 @@
       CATEGORIAS
     </ion-card-header>
     <ion-card-content>
+      <div class="barra-divisoria"></div>
       <ion-grid>
         <ion-row row>
           <ion-col col-lg-4 col-md-6 col-sm-12 col-xs-12 *ngFor="let grupo of grupoService.grupos">
