--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -7,3 +7,22 @@
 <ion-content>
   <button ion-button clear item-end>View</button>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar  style="min-height: 60px">
+    <ion-buttons>
+      <button ion-button style="width: 45%;">
+        <span class="fa fa-fw fa-user-plus buttons-footer"></span>
+        <span class="buttons-text">
+          Adicionar Cliente
+        </span>
+      </button>
+      <button ion-button style="width: 45%;">
+        <span class="fa fa-fw fa-users buttons-footer"></span>
+        <span class="buttons-text">
+          Todos os Clientes
+        </span>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
