Consulta de clientes e cadastro de clientes

--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -52,13 +52,13 @@
 <ion-footer>
   <ion-toolbar  style="min-height: 60px">
     <ion-buttons>
-      <button ion-button style="width: 45%;">
+      <button ion-button style="width: 45%;" (click)="irParaCadastroClientes()">
         <span class="fa fa-fw fa-user-plus buttons-footer"></span>
         <span class="buttons-text">
           Adicionar Cliente
         </span>
       </button>
-      <button ion-button style="width: 45%;">
+      <button ion-button style="width: 45%;" (click)="irParaTodosClientes()">
         <span class="fa fa-fw fa-users buttons-footer"></span>
         <span class="buttons-text">
           Todos os Clientes
