--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -35,23 +35,23 @@
             <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
           </ion-col>
           <ion-col col-3 style="margin-right: 10px !important;">
-            <span class="label-column-list-produtos">Item</span><br>
+            <span class="label-column-list">Item</span><br>
             <span class="produto-column-list-produtos">{{getNomeCompacto(produto, 18)}}</span><br>
-            <span class="label-column-list-produtos">{{getNomeCompacto(produto, 45)}}</span>
+            <span class="label-column-list">{{getNomeCompacto(produto, 45)}}</span>
           </ion-col>
           <ion-col>
-            <span class="label-column-list-produtos">Cod</span><br>
+            <span class="label-column-list">Cod</span><br>
             <span class="item-column-list-produtos">{{produto.codigo}}</span>
           </ion-col>
           <ion-col>
-            <span class="label-column-list-produtos">Estoque</span><br>
+            <span class="label-column-list">Estoque</span><br>
             <span class="item-column-list-produtos">{{produto.quantidade}}</span>
           </ion-col>
           <ion-col>
-            <span class="label-column-list-produtos">Status</span>
+            <span class="label-column-list">Status</span>
           </ion-col>
           <ion-col>
-            <span class="label-column-list-produtos">Preço</span><br>
+            <span class="label-column-list">Preço</span><br>
             <span class="produto-column-list-produtos">R$ 977,50</span>
           </ion-col>
           <ion-col align-self-center>
