--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -28,16 +28,16 @@
 
       <ion-grid>
         <ion-row row *ngFor="let produto of produtos" class="card-item-produto-edges">
-          <ion-col col-auto>
-            <input type="checkbox" style="width: 12px;" [(ngModel)]="produto.selecionado">
+          <ion-col class="col-22px">
+            <input type="checkbox" [(ngModel)]="produto.selecionado">
           </ion-col>
-          <ion-col col-auto align-self-center>
+          <ion-col class="col-80px">
             <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
           </ion-col>
-          <ion-col col-3 style="margin-right: 10px !important;">
+          <ion-col col-5 col-auto>
             <span class="label-column-list">Item</span><br>
-            <span class="produto-column-list-produtos">{{getNomeCompacto(produto, 18)}}</span><br>
-            <span class="label-column-list">{{getNomeCompacto(produto, 45)}}</span>
+            <span class="produto-column-list-produtos" style="width: 100%">{{produto.nome}}</span><br>
+            <span class="label-column-list">{{produto.nome}}</span>
           </ion-col>
           <ion-col>
             <span class="label-column-list">Cod</span><br>
