--- a/pedido-movel/src/pages/cliente/cliente.html
+++ b/pedido-movel/src/pages/cliente/cliente.html
@@ -29,16 +29,16 @@
           <div class="row">
             <div style="margin-right: 10px !important; min-width: 210px;">
               <label for="nome" class="form-label !important;">Nome</label>
-              <input class="input" type="text" id="nome" name="nome" [(ngModel)]="cliente.name" #nome="ngModel" required minlength="5">
+              <input class="input" type="text" id="nome" name="nome" [(ngModel)]="cliente.name" #nome="ngModel" required minlength="5" [ngClass]="{'input-error':  !(nome.valid || (nome.pristine && !formCliente.submitted))}">
               <!--show error only when field is not valid & it's dirty or form submited-->
-              <small [hidden]="nome.valid || (nome.pristine && !formCliente.submitted)"> 
+              <small class="msg-error" [hidden]="nome.valid || (nome.pristine && !formCliente.submitted)"> 
                   Nome é obrigatório (mínimo 5 caracteres).
                 </small>
             </div>
             <div>
               <label for="sobrenome" class="form-label !important;">Sobrenome</label>
               <input class="input" type="text" name="sobrenome" [(ngModel)]="cliente.sobrenome" #sobrenome="ngModel" required minlength="5">
-              <small style="color: #c13018" [hidden]="sobrenome.valid || (sobrenome.pristine && !formCliente.submitted)">
+              <small class="msg-error"  [hidden]="sobrenome.valid || (sobrenome.pristine && !formCliente.submitted)">
                   Sobrenome é obrigatório (mínimo 5 caracteres).
                 </small>
             </div>
